--- a/src/template.html
+++ b/src/template.html
@@ -1,28 +1,38 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="./styles.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/9d5cd28617.js" crossorigin="anonymous"></script>
-  <title>Document</title>
-</head>
-<body>
-  <div class="container">
-    <nav>
-      <div class="logo-container">
-        LOGO
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">Spaceships <span class="item-amount">(6)</span></a></li>
-        <li><a href="#">Planets</a></li>
-        <li><a href="#">Races</a></li>
-      </ul>
-    </nav>
-  </div>
-</body>
+	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./styles.css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script
+			src="https://kit.fontawesome.com/9d5cd28617.js"
+			crossorigin="anonymous"
+		></script>
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="container">
+			<nav>
+				<div class="logo-container">LOGO</div>
+				<ul class="nav-links">
+					<li>
+						<a href="#">Spaceships <span class="item-amount">(6)</span></a>
+					</li>
+					<li><a href="#">Planets</a></li>
+					<li><a href="#">Races</a></li>
+				</ul>
+			</nav>
+		</div>
+		<main></main>
+		<footer class="footer container">Created by binhussen & AbelG</footer>
+	</body>
 </html>
