add cards-container on html

--- a/src/template.html
+++ b/src/template.html
@@ -31,6 +31,7 @@
 					<li><a href="#">Races</a></li>
 				</ul>
 			</nav>
+      <div class="cards-container"></div>
 		</div>
 		<main></main>
 		<footer class="footer container">Created by binhussen & AbelG</footer>
