modify navbar to appropriate nav-links

--- a/src/template.html
+++ b/src/template.html
@@ -22,13 +22,13 @@
 	<body>
 		<div class="container">
 			<nav>
-				<div class="logo-container">LOGO</div>
+				<div class="logo-container">FooDY</div>
 				<ul class="nav-links">
 					<li>
-						<a href="#">Spaceships <span class="item-amount">(6)</span></a>
+						<a href="#">Meals <span class="item-amount">(6)</span></a>
 					</li>
-					<li><a href="#">Planets</a></li>
-					<li><a href="#">Races</a></li>
+					<li><a href="#">Menu</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
       <div class="cards-container"></div>
