UPdate model popup model

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="container">
+		<header class="container">
 			<nav>
 				<div class="logo-container">FooDY</div>
 				<ul class="nav-links">
@@ -31,9 +31,11 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
-      <div class="cards-container"></div>
-		</div>
-		<main></main>
+		</header>
+		<main class="container">
+			<section class="cards-container"></section>
+			<section class="card-detail"></section>
+		</main>
 		<footer class="footer container">Created by binhussen & AbelG</footer>
 	</body>
 </html>
