modify meals amount to be loaded dynamically

--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
 				<div class="logo-container">FooDY</div>
 				<ul class="nav-links">
 					<li>
-						<a href="#">Meals <span class="item-amount">(6)</span></a>
+						<a href="#">Meals <span class="item-amount"></span></a>
 					</li>
 					<li><a href="#">Menu</a></li>
 					<li><a href="#">Contact</a></li>
