--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
 	<body>
 		<header class="container">
 			<nav>
-				<div class="logo-container">FooDY</div>
+				<a href="#home" class="logo-container"></a>
 				<ul class="nav-links">
 					<li>
 						<a href="#">Meals <span class="item-amount"></span></a>
@@ -32,7 +32,7 @@
 				</ul>
 			</nav>
 		</header>
-		<main class="container">
+		<main class="container" id="home">
 			<section class="cards-container"></section>
 			<section class="card-detail"></section>
 		</main>
