Add Huberger for Mobile

--- a/src/template.html
+++ b/src/template.html
@@ -20,9 +20,9 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<header class="container">
-			<nav>
-				<a href="#home" class="logo-container"></a>
+		<header class="container header">
+			<a href="#home" class="logo-container"></a>
+			<nav class="nav">
 				<ul class="nav-links">
 					<li>
 						<a href="#">Meals <span class="item-amount"></span></a>
@@ -31,6 +31,11 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
+			<button type="button" class="hamburger">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</button>
 		</header>
 		<main class="container" id="home">
 			<section class="cards-container"></section>
