Update Huberger fun

--- a/src/template.html
+++ b/src/template.html
@@ -22,13 +22,13 @@
 	<body>
 		<header class="container header">
 			<a href="#home" class="logo-container"></a>
-			<nav class="nav">
+			<nav>
 				<ul class="nav-links">
-					<li>
+					<li class="nav-item">
 						<a href="#">Meals <span class="item-amount"></span></a>
 					</li>
-					<li><a href="#">Menu</a></li>
-					<li><a href="#">Contact</a></li>
+					<li class="nav-item"><a href="#">Menu</a></li>
+					<li class="nav-item"><a href="#">Contact</a></li>
 				</ul>
 			</nav>
 			<button type="button" class="hamburger">
