--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
 			src="https://kit.fontawesome.com/9d5cd28617.js"
 			crossorigin="anonymous"
 		></script>
-		<title>Document</title>
+		<title>Foodie</title>
 	</head>
 	<body>
 		<header class="container header">
