--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			src="https://kit.fontawesome.com/9d5cd28617.js"
 			crossorigin="anonymous"
 		></script>
-		<title>Document</title>
+		<title>Foodie</title>
 	<script defer src="./runtime.bundle.js"></script><script defer src="./index.bundle.js"></script></head>
 	<body>
 		<header class="container header">
